@@ -9,6 +9,7 @@
 
 2010-06-20  Benjamin Mack  <benni@typo3.org>
 
+	* Followup to #13379: Sprite Icon API - Removed unneeded checks in ext_tables.php for t3skin (Thanks to Steffen Ritter)
 	* Followup to #14733: Improvements to Backend skin - Exchanges "selection delete" icon to make it consistent look again (Thanks to Steffen Ritter)
 	* Fixed bug #10424: Old version (3.x) screenshots in CSH (Big thanks to Philipp Gampe)
 	* Followup to #14733: Improvements to Backend skin - Added styling to missing parts of the Backend
